Добавление отчётность Allure

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,6 @@
     <artifactId>PAA</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
     <properties>
         <!-- Java 8 -->
         <java.version>1.8</java.version>
@@ -35,33 +34,16 @@
         <allureJunit5.version>2.14.0</allureJunit5.version>
         <json.version>20210307</json.version>
 
+
         <parallelCount>1</parallelCount>
     </properties>
 
 
     <dependencies>
         <dependency>
-            <groupId> org.apache.cassandra</groupId>
-            <artifactId>cassandra-all</artifactId>
-            <version>0.8.1</version>
-
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-log4j12</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>log4j</groupId>
-                    <artifactId>log4j</artifactId>
-                </exclusion>
-            </exclusions>
-
-        </dependency>
-        <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-junit5</artifactId>
             <version>${allureJunit5.version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.sshd</groupId>
@@ -130,6 +112,13 @@
             <artifactId>log4j-core</artifactId>
             <version>${log4jCore.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
